Feature/tfp 5655 (#4471)
* TFP-5655: Utleder ikke avklar aktivitet for SVP, utleder kun ved AAP for FP.

* TFP-5655: Fjerner utledning av avklar aktiviteter for alle ytelser utenom foreldrepenger